@@ -1031,8 +1031,6 @@ const game_state& connect::get_state()
 
 void connect::start_game()
 {
-	// Set random start ToD
-	gamestatus game_status(level_,atoi(level_["turns"].c_str()),&state_);
 	// Resolves the "random faction", "random gender" and "random message"
 	for (side_list::iterator itor = sides_.begin(); itor != sides_.end();
 			++itor) {
@@ -1043,7 +1041,7 @@ void connect::start_game()
 	config lock;
 	lock.add_child("stop_updates");
 	network::send_data(lock, 0, true);
-	update_and_send_diff();
+	update_and_send_diff(true);
 
 	// Build the gamestate object after updating the level
 	
@@ -1601,10 +1599,15 @@ void connect::update_level()
 	}
 }
 
-void connect::update_and_send_diff()
+void connect::update_and_send_diff(bool update_time_of_day)
 {
 	config old_level = level_;
 	update_level();
+	if (update_time_of_day)
+	{
+		// Set random start ToD
+		gamestatus game_status(level_,atoi(level_["turns"].c_str()),&state_);
+	}
 
 	config diff = level_.get_diff(old_level);
 	if (!diff.empty()) {
